@@ -1,0 +1,2 @@
+debian.service.active=false
+debian.service.sleep.time=60
