@@ -1,0 +1,2 @@
+debian.service.active=true
+debian.service.sleep.time=30
