@@ -1,3 +1,0 @@
-#!/bin/sh
-/sbin/chkconfig --add fhj-timer
-service fhj-timer start
